# axum-template

./: .gitignore  Dockerfile  docker-compose.yml
backend/: Cargo.toml  data.db
backend/migrations/: 001_initial.sql
backend/src/: api_routes.rs  error.rs  main.rs  models.rs  serde_formats.rs  static_route.rs
backend/static/: index.html
backend/static/assets/: index.1dbbd191.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
