[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
mime_guess = "2.0.4"
include_dir = "0.7.3"
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
serde = { version = "1.0.151", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version="0.3.5", features=["trace"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
anyhow = "1.0.71"
chrono = "0.4.24"
thiserror = "1.0.40"
axum-macros = "0.3.7"
regex = "1.8.1"
